crates/plotnik-tests/tests/04-emit/types/captures/duplicate_capture_stops_capture_type_normalization.txt
Q = (program
  (expression_statement
    (identifier) @value
  ) @value :: bool
)
------------------ DIAGNOSTICS -------------------
error: capture `@value` already defined in this scope
 --> query.ptk:4:5
  |
3 |     (identifier) @value
  |                  ------ first captured here
4 |   ) @value :: bool
  |     ^^^^^^
  |
help: rename one capture, or use labeled alternatives to preserve which alternative matched
